<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    android:padding="22dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textSize="25sp"
        android:textColor="@color/white"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@color/pink"
        android:orientation="vertical">
        
        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/logo"
            android:longClickable="true"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/tvTitulo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvTitulo2"
            android:textColor="@color/background"
            android:textSize="25sp"
            android:visibility="gone"/>

        <RadioGroup
            android:id="@+id/rgOpciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <RadioButton
                android:id="@+id/rbCalcular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/rbCalcular"/>

            <RadioButton
                android:id="@+id/rbInformacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbInformacion"/>

            <Button
                android:id="@+id/btnCalcular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnCalcular"
                android:visibility="gone"
                android:onClick="onClickBtn"/>

            <Button
                android:id="@+id/btnInformacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnInformacion"
                android:visibility="gone"
                android:onClick="onClickBtn"/>

        </RadioGroup>

    </LinearLayout>

</LinearLayout>